--- a/dimension-core.html
+++ b/dimension-core.html
@@ -350,19 +350,19 @@
         <div class="screenshot-grid">
           <div class="screenshot-item fade-in appear">
             <div class="screenshot-caption" title="クリックして編集" style="border-radius: 3px;">バトル画面</div>
-            <img src="images/dimension-core/Battle.png" alt="バトル画面" class="modal-trigger" title="クリックして画像を変更" style="">
+            <img src="images/dimension-core/Battle.PNG" alt="バトル画面" class="modal-trigger" title="クリックして画像を変更" style="">
           </div>
           <div class="screenshot-item fade-in appear">
             <div class="screenshot-caption" title="クリックして編集" style="border-radius: 3px;">図形選択</div>
-            <img src="images/dimension-core/SelectShapes.png" alt="キャラクター選択画面" class="modal-trigger" title="クリックして画像を変更" style="">
+            <img src="images/dimension-core/SelectShapes.PNG" alt="キャラクター選択画面" class="modal-trigger" title="クリックして画像を変更" style="">
           </div>
           <div class="screenshot-item fade-in appear">
             <div class="screenshot-caption" title="クリックして編集" style="border-radius: 3px;">アップグレード</div>
-            <img src="images/dimension-core/UpgradeShapes.png" alt="マップ画面" class="modal-trigger" title="クリックして画像を変更" style="">
+            <img src="images/dimension-core/UpgradeShapes.PNG" alt="マップ画面" class="modal-trigger" title="クリックして画像を変更" style="">
           </div>
           <div class="screenshot-item fade-in appear">
             <div class="screenshot-caption" title="クリックして編集" style="border-radius: 3px;">ランダムイベント</div>
-            <img src="images/dimension-core/randomEvent.png" alt="スキル発動エフェクト" class="modal-trigger" title="クリックして画像を変更" style="">
+            <img src="images/dimension-core/randomEvent.PNG" alt="スキル発動エフェクト" class="modal-trigger" title="クリックして画像を変更" style="">
           </div>
         </div>
         
