--- a/dimension-core.html
+++ b/dimension-core.html
@@ -258,7 +258,6 @@
         <a href="index.html#about" class="nav-link">プロフィール</a>
         <a href="index.html#skills" class="nav-link">スキル</a>
         <a href="index.html#works" class="nav-link active">制作実績</a>
-        <a href="index.html#contact" class="nav-link">お問い合わせ</a>
       </div>
       <div class="nav-actions">
         <button class="theme-toggle">
@@ -291,7 +290,7 @@
             <a href="https://github.com/noutetu" target="_blank" class="btn btn-primary">
               <i class="fab fa-github"></i> GitHubで見る
             </a>
-            <a href="#" target="_blank" class="btn btn-secondary">
+            <a href="#" target="_blank" class="btn btn-secondary" style="background-color: #FF0000; border-color: #FF0000; color: white;">
               <i class="fab fa-youtube"></i> プレイ動画を見る
             </a>
           </div>
@@ -518,13 +517,12 @@
             <a href="index.html#about">プロフィール</a>
             <a href="index.html#skills">スキル</a>
             <a href="index.html#works">制作実績</a>
-            <a href="index.html#contact">お問い合わせ</a>
           </div>
           
           <div class="footer-contact">
-            <h3>お問い合わせ</h3>
-            <p><i class="fas fa-envelope"></i> beyoburo@gmail.com</p>
-            <p><i class="fab fa-github"></i> GitHubプロフィール</p>
+            <h3>連絡先</h3>
+            <p><i class="fas fa-envelope"></i> <a href="mailto:beyoburo@gmail.com">beyoburo@gmail.com</a></p>
+            <p><i class="fab fa-github"></i> <a href="https://github.com/noutetu" target="_blank" style="background-color: #211F1F; color: white; padding: 2px 8px; border-radius: 4px; text-decoration: none;">GitHub</a></p>
           </div>
         </div>
       </div>
