--- a/dimension-core.html
+++ b/dimension-core.html
@@ -287,7 +287,7 @@
             シンプルながらも奥深いゲームシステムを目指し、ゲームデザインとプログラミングの両面から挑戦しています。
           </p>
           <div class="project-links" style="justify-content: center; margin-left: auto; margin-right: auto;">
-            <a href="https://github.com/noutetu" target="_blank" class="btn btn-primary">
+            <a href="https://github.com/noutetu/Dimension-Core" target="_blank" class="btn" style="background-color: #211F1F; border-color: #211F1F; color: white;">
               <i class="fab fa-github"></i> GitHubで見る
             </a>
             <a href="#" target="_blank" class="btn btn-secondary" style="background-color: #FF0000; border-color: #FF0000; color: white;">
@@ -522,7 +522,7 @@
           <div class="footer-contact">
             <h3>連絡先</h3>
             <p><i class="fas fa-envelope"></i> <a href="mailto:beyoburo@gmail.com">beyoburo@gmail.com</a></p>
-            <p><i class="fab fa-github"></i> <a href="https://github.com/noutetu" target="_blank" style="background-color: #211F1F; color: white; padding: 2px 8px; border-radius: 4px; text-decoration: none;">GitHub</a></p>
+            <p><i class="fab fa-github"></i> <a href="https://github.com/noutetu/Dimension-Core" target="_blank" style="background-color: #211F1F; color: white; padding: 2px 8px; border-radius: 4px; text-decoration: none;">GitHub</a></p>
           </div>
         </div>
       </div>
